--- a/BlazorUI/Pages/Index.razor
+++ b/BlazorUI/Pages/Index.razor
@@ -1,11 +1,17 @@
 @page "/"
 
+
+
 <PageTitle>Index</PageTitle>
 
 <div class=" top_div">
     <img src="img/reddit_logo.png" alt="reddit logo">
     <div id="buttonsDiv">
-        <button class="button  whiteButton">Log In</button>
-        <button class="button  blueButton">Sign Up</button>
+      <a href="/Login">  <button class="button  whiteButton">Log In</button></a> 
+       <a href="/Signup"><button class="button  blueButton">Sign Up</button></a>
     </div>
 </div>
+
+@code{
+
+}
