--- a/BlazorUI/Pages/_Host.cshtml
+++ b/BlazorUI/Pages/_Host.cshtml
@@ -6,3 +6,6 @@
 }
 
 <component type="typeof(App)" render-mode="Server"/>
+<link rel="stylesheet" href="_content/Radzen.Blazor/css/default-base.css">
+<link rel="stylesheet" href="_content/Radzen.Blazor/css/default.css">
+<script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
