--- a/BlazorUI/Pages/Index.razor.css
+++ b/BlazorUI/Pages/Index.razor.css
@@ -12,11 +12,6 @@
     box-shadow: 0 9px #999;
 
 }
-
-.top_div {
-    align-items: flex-end;
-}
-
 .whiteButton {
     color: #0a58ca;
     background-color: white;
@@ -46,6 +41,27 @@
     border-color: #0a58ca;
     transition: .4s
 }
+.dropdown {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+
 
 .blueButton:active {
     color: #0a58ca;
@@ -54,6 +70,4 @@
     box-shadow: 0 5px #666;
     transform: translateY(4px);
 }
-#buttonsDiv{
-    float: right;
-}
+
