--- a/BlazorUI/Pages/Login.razor
+++ b/BlazorUI/Pages/Login.razor
@@ -1,5 +1,5 @@
 ﻿@page "/Login"
-@using Application.Authentication
+@using BlazorUI.Authentication
 @inject IAuthService authService
 @inject NavigationManager navMgr
 
