--- a/BlazorUI/Pages/Signup.razor.css
+++ b/BlazorUI/Pages/Signup.razor.css
@@ -1,4 +1,4 @@
-.card {
+﻿.card {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     width: 250px;
@@ -12,7 +12,7 @@
     margin-top: 20px;
 }
 
-.signUp {
+.signUpBtn {
     background-color:lightgreen;
     border-radius: 5px;
     padding: 5px;
@@ -20,7 +20,7 @@
     padding-right: 10px;
 }
 
-.signUp:hover{
+.signUpBtn:hover{
     transform: scale(1.1);
     box-shadow: 0 2px 10px 2px #3f3f3f;
 }
